--- a/style.css
+++ b/style.css
@@ -1,9 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    text-decoration: none;
+    box-sizing: border-box;  
 }
 
-h1{
-    color: red;
+body {
+    margin-top: 1rem;
+    background-color: #fff;
+}
+
+.header {
+    padding: 5px;
+    background-color: #dcdcdc;
+    border-bottom: solid 2px #778877;
+}
+
+.h1 {
+    width: 25%;
+    padding: 2px;
+    color: #000;
+    margin: 0 auto;    
+}
+
+.h2{
+    
+    width: 35%;
+    padding: 2px; 
+    color: #000;
+    margin: 0 auto;
+    font-style: italic;
+}
+section{
+    padding: 85px;
+}
+
+.div_img{
+    width: 15%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.footer{ 
+    width: 20%;
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
+    border-top: 2px solid #778877;
 }
